docs/4.4.1/documentation/documents/architecture/interactions.md
# Взаимодействия

> Схемы приведены в разделе [Диаграммы развертывания](deployment-diagrams.md).

## Интеграционные взаимодействия при развертывании на VM

В таблице отражены интеграционные взаимодействия при развертывании IAM Proxy на виртуальной машине.

| №  | Потребитель                      | Поставщик                                      | Момент взаимодействия                                                                                                                                                                      | Протокол передачи данных | Технология взаимодействия | Протокол шифрования |
|:---|:---------------------------------|:-----------------------------------------------|:-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|:------------------------:|:-------------------------:|:-------------------:|
| 1  | Пользователь                     | Балансировщик нагрузки IAM KCSE                | Аутентификация Пользователя на `Провайдере аутентификации OIDC`. Завершение сессии на `Провайдере аутентификации OIDC`                                                                     |           HTTP           |                           |      TLS 1.2+       |
| 2  | Пользователь                     | Балансировщик нагрузки IAM Proxy               | Обращение Пользователя из клиентского приложения (браузер) к UI и API АС через `Proxy Server` (IAM Proxy), или обращение к `Proxy Server` при выполнении шагов связанных с аутентификацией |           HTTP           |                           |      TLS 1.2+       |
| 3  | Proxy Server, IAM Proxy          | Балансировщик нагрузки IAM KCSE                | Балансировщик нагрузки направляет запрос на `Proxy Server` в момент его получения                                                                                                          |           HTTP           |                           |      TLS 1.2+       |
| 4  | Proxy Server, IAM Proxy          | Балансировщик нагрузки IAM AZGT                | Первое обращение к UI и API АС через `Proxy Server`, если это обращение требует авторизации в `Авторизация`                                                                                |           HTTP           |                           |      TLS 1.2+       |
| 5  | Proxy Server, IAM Proxy          | Подсистема с UI и API                          | Обращение к UI и API АС через `Proxy Server`                                                                                                                                               |           HTTP           |                           |      mTLS 1.2+      |
| 6  | Proxy Server, IAM Proxy          | RDS Server                                     | При периодическом получении/обновлении параметров проксирования для настройки `Proxy Server` (параметры в части ответвлений)                                                               |           HTTP           |         REST API          |      mTLS 1.2+      |
| 8  | Proxy Server, IAM Proxy          | Балансировщик нагрузки IAM AZGT                | Первое обращение к UI и API АС через `Proxy Server`, если это обращение требует авторизации в `Авторизация`                                                                                |           HTTP           |         REST API          |      mTLS 1.2+      |
| 7  | Proxy Server, IAM Proxy          | Журналирование (LOGA)                          | При появлении записей в журнале работы `Proxy Server` они передаются в `Журналирование` (LOGA)                                                                                             |      Kafka или HTTP      |     REST API при HTTP     |      mTLS 1.2+      |
| 8  | RDS Server                       | Audit (AUDT)                                   | В момент изменения активного контура на `RDS Server` выполняется отправка события в `Audit` (AUDT)                                                                                         |      jdbc или HTTP       |     REST API при HTTP     |      mTLS 1.2+      |
| 9  | RDS Server                       | PACMAN (CFGA)                                  | При старте `RDS Server` получает данные о параметрах для `Proxy Server` из `PACMAN` (CFGA), а после, периодически обновляет их                                                             |      Kafka или HTTP      |     REST API при HTTP     |      mTLS 1.2+      |
| 10 | RDS Server                       | Прикладной журнал (APLJ)                       | При старте `RDS Server` получает данные о активном контуре из `Прикладной журнал` (APLJ), а после, периодически обновляет их                                                               |      Kafka или HTTP      |     REST API при HTTP     |      mTLS 1.2+      |
| 11 | Proxy Server, IAM Proxy          | Audit (AUDT)                                   | По завершению обработки HTTP запроса к `Proxy Server` выполняется запись в журнал доступа, и по необходимости производится отправка события в `Audit` (AUDT)                               |           HTTP           |         REST API          |      mTLS 1.2+      |
| 12 | Балансировщик нагрузки IAM KCSE  | Провайдер аутентификации OIDC, IAM KCSE (KCSE) | Балансировщик нагрузки направляет запрос на `Провайдер аутентификации OIDC` в момент его получения                                                                                         |           HTTP           |         REST API          |      mTLS 1.2+      |
| 13 | Балансировщик нагрузки IAM Proxy | Proxy Server, IAM Proxy                        | Балансировщик нагрузки направляет запрос на `Proxy Server` в момент его получения                                                                                                          |           HTTP           |         REST API          |      mTLS 1.2+      |
| 14 | Балансировщик нагрузки IAM AZGT  | Авторизация (AZGT)                             | Балансировщик нагрузки направляет запрос на `Авторизация` в момент его получения                                                                                                           |           HTTP           |         REST API          |      mTLS 1.2+      |
| 15 | RDS Server                       | Журналирование (LOGA)                          | При появлении записей в журнале работы `RDS Server` они передаются в `Журналирование` (LOGA)                                                                                               |      Kafka или HTTP      |     REST API при HTTP     |      mTLS 1.2+      |
| 16 | Proxy Server, IAM Proxy          | Внешняя система управления секретами (Secman)  | При старте `Proxy Server` получает секреты из `Внешней системы управления секретами` (Secman), а после, периодически проверяет их изменение и обновляет по необходимости                   |           HTTP           |         REST API          |      mTLS 1.2+      |                         

Примечания:
- вызовы к `Proxy Server`, `Keycloak.SE` и `Авторизация (AZGT)` осуществляются
  через балансировщики нагрузки.

## Интеграционные взаимодействия при развертывании в OpenShift/k8s

### Рекомендованная схема

В таблице отражены интеграционные взаимодействия при развертывании IAM Proxy при развертывании в OpenShift/k8s.

| №  | Потребитель                | Поставщик                                        | Момент взаимодействия                                                                                                                                                                        | Протокол передачи данных | Технология взаимодействия | Протокол шифрования |
|:---|:---------------------------|:-------------------------------------------------|:---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|:------------------------:|:-------------------------:|:-------------------:|
| 1  | Пользователь               | Proxy Server, IAM Proxy                          | Обращение Пользователя из клиентского приложения (браузер) к UI и API АС через `Proxy Server` (IAM Proxy), или обращение к `Proxy Server` при выполнении шагов связанных с аутентификацией   |           HTTP           |                           | TLS на ingress 1.2+ |
| 2  | Пользователь               | Провайдер аутентификации OIDC, IAM SE (KCSE)     | Аутентификация Пользователя на `Провайдере аутентификации OIDC`. Завершение сессии на `Провайдере аутентификации OIDC`                                                                       |           HTTP           |                           |      TLS 1.2+       |
| 3  | Proxy Server, IAM Proxy    | Провайдер аутентификации OIDC, IAM SE (KCSE)     | Обращение к `Провайдер аутентификации OIDC` в момент получения/обновления/отзыва аутентификационных JWT-токенов (в токенах обычно имеется информация об УЗ, такая как логин, ФИО, роли в АС) |           HTTP           |         REST API          |      TLS 1.2+       |
| 4  | Proxy Server, IAM Proxy    | Подсистема с UI и API                            | Обращение к UI и API АС через `Proxy Server`                                                                                                                                                 |           HTTP           |                           | mTLS на egress 1.2+ |
| 5  | Proxy Server, IAM Proxy    | Журналирование (LOGA)                            | При появлении записей в журнале работы `Proxy Server` они передаются в `Журналирование` (LOGA)                                                                                               |      Kafka или HTTP      |     REST API при HTTP     | mTLS на egress 1.2+ |
| 6  | Proxy Server, IAM Proxy    | Внешняя система управления секретами (Secman)    | При старте `Proxy Server` получает секреты из `Внешней системы управления секретами` (Secman), а после, периодически проверяет их изменение и обновляет по необходимости                     |           HTTP           |         REST API          |      mTLS 1.2+      |
| 7  | Proxy Server, IAM Proxy    | Сервис управления политиками Service Mesh (POLM) | Передача параметров `SSM` при старте, и их обновление при изменениях                                                                                                                         |           grpc           |                           |      mTLS 1.2+      |
| 8  | Synapse Ingress gateway    | Внешняя система управления секретами (Secman)    | Получение сертификатов при старте и обновление их при работе                                                                                                                                 |           HTTP           |         REST API          |      mTLS 1.2+      |
| 9  | Synapse Ingress gateway    | Сервис управления политиками Service Mesh (POLM) | Передача параметров `SSM` при старте, и их обновление при изменениях                                                                                                                         |           grpc           |                           |      mTLS 1.2+      |
| 10 | Synapse Egress gateway     | Внешняя система управления секретами (Secman)    | Получение сертификатов при старте и обновление их при работе                                                                                                                                 |           HTTP           |         REST API          |      mTLS 1.2+      |
| 11 | Synapse Egress gateway     | Сервис управления политиками Service Mesh (POLM) | Передача параметров `SSM` при старте, и их обновление при изменениях                                                                                                                         |           grpc           |                           |      mTLS 1.2+      |

Примечания:
- вызовы к `Proxy Server`, `Keycloak.SE` и `Авторизация` осуществляются
  через балансировщики нагрузки.

### Схема с отображением опциональных компонент

В таблице отражены интеграционные взаимодействия при развертывании IAM Proxy при развертывании в OpenShift/k8s.

| №  | Потребитель                | Поставщик                                                  | Момент взаимодействия                                                                                                                                                                        | Протокол передачи данных | Технология взаимодействия | Протокол шифрования  |
|:---|:---------------------------|:-----------------------------------------------------------|:---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|:------------------------:|:-------------------------:|:--------------------:|
| 1  | Пользователь               | Proxy Server, IAM Proxy                                    | Обращение Пользователя из клиентского приложения (браузер) к UI и API АС через `Proxy Server` (IAM Proxy), или обращение к `Proxy Server` при выполнении шагов связанных с аутентификацией   |           HTTP           |                           | TLS на ingress 1.2+  |
| 2  | Пользователь               | Провайдер аутентификации OIDC, IAM SE (KCSE)               | Аутентификация Пользователя на `Провайдере аутентификации OIDC`. Завершение сессии на `Провайдере аутентификации OIDC`                                                                       |           HTTP           |                           |       TLS 1.2+       |
| 3  | Proxy Server, IAM Proxy    | Провайдер аутентификации OIDC, IAM SE (KCSE)               | Обращение к `Провайдер аутентификации OIDC` в момент получения/обновления/отзыва аутентификационных JWT-токенов (в токенах обычно имеется информация об УЗ, такая как логин, ФИО, роли в АС) |           HTTP           |         REST API          |       TLS 1.2+       |
| 4  | Proxy Server, IAM Proxy    | Подсистема с UI и API                                      | Обращение к UI и API АС через `Proxy Server`                                                                                                                                                 |           HTTP           |                           | mTLS на egress 1.2+  |
| 5  | Proxy Server, IAM Proxy    | RDS Server                                                 | Обращение при периодическом получении/обновлении параметров проксирования для настройки `Proxy Server` (параметры в части ответвлений)                                                       |           HTTP           |         REST API          |                      |
| 6  | Proxy Server, IAM Proxy    | Audit (AUDT)                                               | По завершению обработки HTTP запроса к `Proxy Server` выполняется запись в журнал доступа, и по необходимости производится отправка события в `Audit` (AUDT)                                 |      Kafka или HTTP      |     REST API при HTTP     | mTLS на egress 1.2+  |
| 7  | Proxy Server, IAM Proxy    | Единый коллектор телеметрии (COTE)                         | По завершению обработки HTTP запроса к `Proxy Server` выполняется запись в журнал доступа, и по необходимости производится отправка события в `Единый коллектор телеметрии` (COTE)           |      Kafka или HTTP      |     REST API при HTTP     | mTLS на egress 1.2+  |
| 8  | Proxy Server, IAM Proxy    | Журналирование (LOGA)                                      | При появлении записей в журнале работы `Proxy Server` они передаются в `Журналирование` (LOGA)                                                                                               |      Kafka или HTTP      |     REST API при HTTP     | mTLS на egress 1.2+  |
| 9  | Proxy Server, IAM Proxy    | Авторизация (AZGT)                                         | Первое обращение к UI и API АС через `Proxy Server`, если это обращение требует авторизации в `Авторизации`                                                                                  |           HTTP           |         REST API          | mTLS на egress 1.2+  |
| 10 | Proxy Server, IAM Proxy    | Внешняя система управления секретами (Secman)              | При старте `Proxy Server` получает секреты из `Внешней системы управления секретами` (Secman), а после, периодически проверяет их изменение и обновляет по необходимости                     |           HTTP           |         REST API          |      mTLS 1.2+       |
| 11 | Proxy Server, IAM Proxy    | Сервис управления политиками Service Mesh (POLM)           | Передача параметров `SSM` при старте, и их обновление при изменениях                                                                                                                         |           grpc           |                           |      mTLS 1.2+       |
| 12 | RDS Server                 | PACMAN (CFGA)                                              | При старте `RDS Server` получает данные о параметрах для `Proxy Server` из `PACMAN` (CFGA), а после, периодически обновляет их                                                               |      jdbc или HTTP       |     REST API при HTTP     | mTLS на egress 1.2+  |
| 13 | RDS Server                 | Audit (AUDT)                                               | В момент изменения активного контура на `RDS Server` выполняется отправка события в `Audit` (AUDT)                                                                                           |      Kafka или HTTP      |     REST API при HTTP     | mTLS на egress 1.2+  |
| 14 | RDS Server                 | Единый коллектор телеметрии (COTE)                         | В момент изменения активного контура на `RDS Server` выполняется отправка события в `Единый коллектор телеметрии` (COTE)                                                                     |      Kafka или HTTP      |     REST API при HTTP     | mTLS на egress 1.2+  | 
| 15 | RDS Server                 | Сервис управления политиками Service Mesh (POLM)           | Передача параметров `SSM` при старте, и их обновление при изменениях                                                                                                                         |           grpc           |                           |      mTLS 1.2+       | 
| 16 | RDS Server                 | Прикладной журнал (APLJ)                                   | При старте `RDS Server` получает данные о активном контуре из `Прикладной журнал` (APLJ), а после, периодически обновляет их                                                                 |           HTTP           |         REST API          | mTLS на egress 1.2+  |
| 17 | Прикладной журнал (APLJ)   | RDS Server                                                 | При изменении статуса активного контура в `Прикладной журнал` (APLJ), он вызывает `RDS Server` для инициации обновления статуса по конутрам                                                  |           HTTP           |         REST API          | mTLS на ingress 1.2+ |
| 18 | Synapse Ingress gateway    | Внешняя система управления секретами (Secman)              | Получение сертификатов при старте и обновление их при работе                                                                                                                                 |           HTTP           |         REST API          |      mTLS 1.2+       |
| 19 | Synapse Ingress gateway    | Сервис управления политиками Service Mesh (POLM)           | Передача параметров `SSM` при старте, и их обновление при изменениях                                                                                                                         |           grpc           |                           |      mTLS 1.2+       |
| 20 | Synapse Egress gateway     | Внешняя система управления секретами (Secman)              | Получение сертификатов при старте и обновление их при работе                                                                                                                                 |           HTTP           |         REST API          |      mTLS 1.2+       |
| 21 | Synapse Egress gateway     | Сервис управления политиками Service Mesh (POLM)           | Передача параметров `SSM` при старте, и их обновление при изменениях                                                                                                                         |           grpc           |                           |      mTLS 1.2+       |
| 22 | Сервис сбора метрик (MONA) | RDS Server                                                 | Периодическое получение метрик состояния `RDS Server`                                                                                                                                        |           HTTP           |         REST API          |                      |
| 23 | Сервис сбора метрик (MONA) | Proxy Server, IAM Proxy                                    | Периодическое получение метрик состояния `Proxy Server`                                                                                                                                      |           HTTP           |         REST API          |                      |
| 24 | Сервис сбора метрик (MONA) | Объединенный мониторинг Unimon (MONA)                      | `Сервис сбора метрик` периодически отправляет метрики в `Объединенный мониторинг Unimon` (MONA)                                                                                              |           HTTP           |         REST API          | mTLS на egress 1.2+  |
| 25 | Synapse Ingress gateway    | Сервис ограничения (квотирования) входящих запросов (SRLS) | При обработке входящих HTTP-запросов через `Synapse Ingress gateway` выполняется проверка лимитов (квот) на количество запросов.                                                             |           grpc           |                           |      mTLS 1.2+       |

Примечания:
- вызовы к `Proxy Server`, `Keycloak.SE` и `Авторизация` осуществляются
  через балансировщики нагрузки.

